--- a/twitter_clone/src/App.css
+++ b/twitter_clone/src/App.css
@@ -2,3 +2,13 @@
   margin: 0;
   padding: 0;
 }
+body{
+  width: 100vw;
+  height: 100vh;
+}
+.container{
+  /* border: 5px solid gray; */
+  width: 100%;
+  margin: 0;
+  height: 100%;
+}
