--- a/twitter_clone/src/Components/2nd-1/PostUpdater/wedges.css
+++ b/twitter_clone/src/Components/2nd-1/PostUpdater/wedges.css
@@ -1,6 +1,8 @@
 .widgets {
     flex: 0.3;
-    width: 30vw;
+    width: 30%;
+    /* border: 3px solid rgb(206, 18, 18); */
+    height: 90%;
   }
   
   .widgets__input {
@@ -23,10 +25,10 @@
   
   .widgets__searchIcon {
     color: rgb(30, 26, 26);
-    /* border:1px solid white;
+    border:1px solid white;
     border-right: none;
     border-radius: 0px 0px 10px 10px;
-    padding:10px; */
+    padding:10px;
 
   }
   
@@ -36,29 +38,35 @@
     padding: 20px;
     background-color: #a9fcfb;
     border-radius: 20px;
-    width: 500px;
+    width: 90%;
   }
   
   .widgets__widgetContainer > h2 {
     font-size: 18px;
     font-weight: 800;
   }
-  /* .widgets__widgetContainer > TwitterShareButton{
-    width: 200px;
-  } */
-  #twitter-widget-2{
-    /* border: 5px solid blue; */
-   padding: 20px;
+  .widgets__widgetContainer > TwitterShareButton{
+    width: 20%;
+    border: 5px solid blue;
   }
+ 
+  
   
 element.style {
-    position: static;
+    position: static; 
     visibility: visible;
-    width: 73px;
+    width: 30%px;
     height: 21px;
+    border: 3px solid rgb(22, 19, 19); 
 }
-#twitter-widget-2 {
-    border: 5px solid rgb(240, 240, 251);
-    /* padding: 20px; */
-    color: black;
+/* #twitter-widget-2 {
+    border: 5px solid rgb(21, 21, 150);
+    padding: 20px;
+    color: rgb(229, 212, 212);
+    background-color: black;
+} */
+
+#twitter-widget-4{
+  width: 100%;
+  border: 5px solid rgb(255, 27, 27);
 }
