--- a/twitter_clone/src/Components/Pages/FirstSec/SidebarLink.css
+++ b/twitter_clone/src/Components/Pages/FirstSec/SidebarLink.css
@@ -1,10 +1,11 @@
 
 .link{
+  /* border : 5px solid red; */
     display: flex;
     align-items: cover;
     cursor: pointer;
-    border-radius: 30px;
-    margin-top: 50px;
+    border-radius: 3rem;
+    margin-top: 1.5rem;
     padding: 5px;
   }
   .link:hover{
