--- a/twitter_clone/src/Components/Post/Post.css
+++ b/twitter_clone/src/Components/Post/Post.css
@@ -47,11 +47,12 @@
 
 */   
  .post__footer {
-  width: 800px;
+  width: 80%;
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
   margin-left: 50px;
+  /* border: 3px solid red; */
 } 
 .likediv{
   display: flex;
@@ -63,20 +64,22 @@
 
 
   .post {
+    border: 5px solid gray;
     width:100%;
-    margin:20px;
+    margin:1rem;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     border-bottom: 1px solid var(--twitter-background);
-    padding-bottom: 10px;
+    padding-bottom: 2rem;
     overflow-y: hidden;
   }
-  .user-div{
+  /* .user-div{
     display: flex;
     width:100%;
     align-items: center;
-  }
+    border: 5px solid green;
+  } */
   .user-div img{
     border-radius: 50%;
     margin:10px;
